--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  arcore_flutter_plugin: ^0.0.11
 
 
   # The following adds the Cupertino Icons font to your application.
