--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hanri.arproject.ar_project">
-   <uses-sdk android:minsdkVersion = "24"/>
    <uses-permission android:name="android.permission.CAMERA"/>
-   <uses-permission android:name="android.hardware.camera.ar"/>
+   <uses-feature android:name="android.hardware.camera.ar"/>
    <application
         android:label="ar_project"
         android:name="${applicationName}"
